--- a/src/style/modal.css
+++ b/src/style/modal.css
@@ -16,7 +16,10 @@
   }
 
   .modal-container {
+    /*
     width: 50%;
+    */
+    width: 400px;
     margin: 0px auto;
     padding: 20px 30px;
     background-color: #fff;
